--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "rollup": "^0.37.0",
     "uglify-js": "^2.7.5",
+    "rollup-plugin-html": "^0.2.1",
     "rollup-plugin-node-resolve": "^2.0.0"
   },
   "readmeFilename": "README.md"
